[gd_scene load_steps=9 format=3 uid="uid://1q2rtd4hmfqu"]

[ext_resource type="Texture2D" uid="uid://cjdnpf7owyvk4" path="res://Recursos/Fondos/NUEVOSLAYERS/fondowhack.png" id="1_5ugm6"]
[ext_resource type="Script" path="res://bonus_3.gd" id="1_i7fnm"]
[ext_resource type="Texture2D" uid="uid://xwo1ip72yumk" path="res://Recursos/Fondos/NUEVOSLAYERS/fondo hole.png" id="2_rqvko"]
[ext_resource type="Texture2D" uid="uid://gqme61plukyq" path="res://Recursos/Fondos/NUEVOSLAYERS/grass.png" id="3_5xx1u"]
[ext_resource type="Texture2D" uid="uid://c0h0p68r43h4w" path="res://Recursos/Fondos/NUEVOSLAYERS/hole 1.png" id="4_8wa5j"]

[sub_resource type="Animation" id="Animation_8qis6"]
length = 0.001

[sub_resource type="Animation" id="Animation_s5kv3"]
resource_name = "mole"
length = 20.0

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3rgvt"]
_data = {
"RESET": SubResource("Animation_8qis6"),
"mole": SubResource("Animation_s5kv3")
}

[node name="Bonus3" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i7fnm")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1165.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_5ugm6")
expand_mode = 1

[node name="FondoHole" type="Sprite2D" parent="."]
visible = false
position = Vector2(363.5, 718.5)
scale = Vector2(1.60981, 1.6941)
texture = ExtResource("2_rqvko")

[node name="Grass" type="Sprite2D" parent="."]
position = Vector2(429, 1036.25)
scale = Vector2(0.845917, 0.991005)
texture = ExtResource("3_5xx1u")

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2(131, 673)
scale = Vector2(1.06712, 1.08081)
texture = ExtResource("2_rqvko")
polygon = PackedVector2Array(-107.357, 562.601, 39.3687, -0.900135, 397.633, -4.50078, 536.258, 557.2)
uv = PackedVector2Array(24.3646, 546.813, 11.2452, 10.1776, 419.821, 2.7757, 419.821, 544.037)

[node name="CharacterButton2" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 231.0
offset_top = 622.0
offset_right = 331.0
offset_bottom = 722.0
ignore_texture_size = true
stretch_mode = 0

[node name="CharacterButton1" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 570.0
offset_right = 104.0
offset_bottom = 670.0
ignore_texture_size = true
stretch_mode = 0

[node name="Hole6" type="Sprite2D" parent="."]
position = Vector2(364, 773)
scale = Vector2(0.267284, 0.269048)
texture = ExtResource("4_8wa5j")
offset = Vector2(7.48267, 293.628)

[node name="Hole1" type="Sprite2D" parent="."]
position = Vector2(207, 1098)
scale = Vector2(0.267284, 0.269048)
texture = ExtResource("4_8wa5j")
offset = Vector2(17.7714, 253.672)

[node name="Hole2" type="Sprite2D" parent="."]
position = Vector2(515, 1091)
scale = Vector2(0.267284, 0.269048)
texture = ExtResource("4_8wa5j")
offset = Vector2(3.74133, 267.611)

[node name="Hole3" type="Sprite2D" parent="."]
position = Vector2(364, 1000)
scale = Vector2(0.267284, 0.269048)
texture = ExtResource("4_8wa5j")
offset = Vector2(3.74133, 245.309)

[node name="Hole4" type="Sprite2D" parent="."]
position = Vector2(224, 891)
scale = Vector2(0.267284, 0.269048)
texture = ExtResource("4_8wa5j")
offset = Vector2(0, 267.61)

[node name="Hole5" type="Sprite2D" parent="."]
position = Vector2(498, 898)
scale = Vector2(0.267284, 0.269048)
texture = ExtResource("4_8wa5j")
offset = Vector2(-11.224, 234.159)

[node name="Hole7" type="Sprite2D" parent="."]
position = Vector2(253, 672)
scale = Vector2(0.267284, 0.269048)
texture = ExtResource("4_8wa5j")
offset = Vector2(0, 215.575)

[node name="Hole8" type="Sprite2D" parent="."]
position = Vector2(488, 681)
scale = Vector2(0.267284, 0.269048)
texture = ExtResource("4_8wa5j")
offset = Vector2(0, 189.557)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3rgvt")
}

[node name="GameTimer" type="Timer" parent="."]
autostart = true

[node name="ShowTimer" type="Timer" parent="."]
autostart = true

[node name="TimeLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = 104.0
offset_right = 272.0
offset_bottom = 251.0

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 556.0
offset_top = 44.0
offset_right = 660.0
offset_bottom = 127.0

[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
[connection signal="timeout" from="ShowTimer" to="." method="_on_show_timer_timeout"]
